:fire: Removed addition of redundant java.xml.bind module